--- a/theme.css
+++ b/theme.css
@@ -34,3 +34,10 @@
   color: #f2f2f2 !important; /* change color */
 }
 /* ----------------------------------------- */
+
+/* IMAGE */
+.features-section .logo-container {
+  height: 15vw;
+  max-height: 200px;
+  min-height: 90px;
+}
